fixes logo margin in nav on small devices

--- a/client/stylesheets/edgardStyle.less
+++ b/client/stylesheets/edgardStyle.less
@@ -604,7 +604,7 @@ ul.sort {
       margin-top: 80px;
       @media only screen and (min-width : @screen-sm-min) {
         margin-top:0;
-        min-height: 145px;
+        height: 145px;
         padding: 20px;
         padding-top: 10px;
       }
@@ -952,6 +952,7 @@ div.rate-star.dark-gray button.rateit-reset {
   @nav-logo-height : 47px;
   img.nav-img-logo {
     width: @nav-logo-width * 0.9;
+    margin-right: 0;
     height: @nav-logo-height;
   }
   @media only screen and (min-width : @screen-sm-min) {
